--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ axum = "0.5"
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tower = { version = "0.4", features = ["util"] }
+tower = { version = "0.4", features = ["util", "timeout"] }
 tower-http = { version = "0.3", features = ["trace"] }
 dotenv = "0.15"
 mongodb = { version = "2", features = [] }
