--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0", features = ["derive"] }
 # serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
 bson = { version = "2", features = ["chrono-0_4", "serde_with"] }
+futures = "0.3"
 
 # https://github.com/mongodb/bson-rust/issues/303#issuecomment-1198026738
 serde_with = { version = "1.14", features = [] }
